--- a/Simple Storage/AndroidManifest.xml
+++ b/Simple Storage/AndroidManifest.xml
@@ -3,6 +3,8 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="19" />
 
 </manifest>
