--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
-bin
-gen
 .DS_Store
+
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
 *.class
+
+# generated files
+bin/
+gen/
+
+# Key
+*.jks
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Intellij project files
+*.iml
+*.ipr
+*.iws
+.idea/
+*.prefs
+
+# Gradle
+build/
+.gradle
