Add ability to publish to maven local. Rename folder to avoid space in order to publish.

--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.13.0'
+        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.github.dcendents:android-maven-plugin:1.2'
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-    }
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.12'
 }
