--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,15 @@ buildscript {
     }
 }
 
+allprojects {
+    version = VERSION_NAME
+    group = GROUP
+
+    repositories {
+        mavenCentral()
+    }
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = '1.12'
 }
