--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-VERSION_NAME=1.0
+VERSION_NAME=1.0.0
 VERSION_CODE=1
+GROUP=com.sromku.simple.storage
 
 ANDROID_BUILD_MIN_SDK_VERSION=8
 ANDROID_BUILD_TARGET_SDK_VERSION=21
