--- a/simple-storage/build.gradle
+++ b/simple-storage/build.gradle
@@ -18,6 +18,45 @@ android {
     }
 }
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'simple-storage'
+
+    publishedGroupId = 'com.sromku'
+    libraryName = 'Simple Storage'
+    artifact = 'simple-storage'
+
+    libraryDescription = 'Create, read, delete, append, encrypt files and more, on internal or external disk spaces with a really simple API'
+
+    siteUrl = 'https://github.com/sromku/android-simple-storage'
+    gitUrl = 'https://github.com/sromku/android-simple-storage.git'
+
+    libraryVersion = '1.1.0'
+
+    developerId = 'sromku'
+    developerName = 'Roman Kushnarenko'
+    developerEmail = 'sromku@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+    }
+}
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
