implemented tests for the public directory of external storage

--- a/simple-storage/src/main/AndroidManifest.xml
+++ b/simple-storage/src/main/AndroidManifest.xml
@@ -1,1 +1,5 @@
-<manifest package="com.sromku.simple.storage"/>
+<manifest package="com.sromku.simple.storage"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+</manifest>
