--- a/simple-storage/build.gradle
+++ b/simple-storage/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 22
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -22,20 +22,20 @@ ext {
     bintrayRepo = 'maven'
     bintrayName = 'simple-storage'
 
-    publishedGroupId = 'com.sromku'
+    publishedGroupId = 'com.snatik'
     libraryName = 'Simple Storage'
     artifact = 'simple-storage'
 
     libraryDescription = 'Create, read, delete, append, encrypt files and more, on internal or external disk spaces with a really simple API'
 
-    siteUrl = 'https://github.com/sromku/android-simple-storage'
-    gitUrl = 'https://github.com/sromku/android-simple-storage.git'
+    siteUrl = 'https://github.com/snatik/android-simple-storage'
+    gitUrl = 'https://github.com/snatik/android-simple-storage.git'
 
-    libraryVersion = '1.2.1'
+    libraryVersion = '2.0.1'
 
     developerId = 'sromku'
     developerName = 'Roman Kushnarenko'
-    developerEmail = 'sromku@gmail.com'
+    developerEmail = 'roman@sromku.com'
 
     licenseName = 'The Apache Software License, Version 2.0'
     licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
