update lib name

--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -31,7 +31,7 @@ ext {
     siteUrl = 'https://github.com/snatik/android-storage'
     gitUrl = 'https://github.com/snatik/android-storage.git'
 
-    libraryVersion = '2.0.1'
+    libraryVersion = '2.0.2'
 
     developerId = 'sromku'
     developerName = 'Roman Kushnarenko'
@@ -56,11 +56,7 @@ buildscript {
     }
 }
 
-tasks.withType(Javadoc) {
-    options.addStringOption('Xdoclint:none', '-quiet')
-    options.addStringOption('encoding', 'UTF-8')
-    options.addStringOption('charSet', 'UTF-8')
-}
+tasks.withType(Javadoc).all { enabled = false }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
